--- a/angular-part07-formulario/src/assets/css/pagina-inicial.css
+++ b/angular-part07-formulario/src/assets/css/pagina-inicial.css
@@ -11,7 +11,7 @@ section.debugg pre {
 }
 
 section.data-form .multiSelect {
-  height: auto;
+  height: 100px;
 }
 
 /*# sourceMappingURL=pagina-inicial.css.map */
