--- a/angular-part08-request-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/angular-part08-request-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -2,10 +2,13 @@
   <div class="card">
     <div class="card-header d-flex justify-content-between">
       <h2>Cursos</h2>
-      <button class="btn btn-primary">Novo Curso</button>
+      <div>
+        <a class="btn btn-primary me-2" [routerLink]="['/cursos/novo']">Novo Curso</a>
+        <button class="btn btn-primary" (click)="onRefresh()">Atualizar</button>
+      </div>
     </div>
     <div class="card-body">
-      <table class="table table-hover">
+      <table class="table table-hover" *ngIf="cursos$ | async as cursos; else loading">
         <thead>
         <tr>
           <th>#</th>
@@ -26,6 +29,16 @@
         </tr>
         </tbody>
       </table>
+      <ng-template #loading>
+        <span>Carregando Cursos</span>
+      </ng-template>
+<!--      <ng-template #loading>-->
+<!--        <div *ngIf="error$ | async; else loadingNoError">-->
+<!--          <span>Erro ao carregar cursos. Tente novamente mais tarde.</span>-->
+<!--        </div>-->
+<!--        -->
+<!--      </ng-template>-->
     </div>
   </div>
 </section>
+
