--- a/angular-part08-request-http/src/app/app.component.html
+++ b/angular-part08-request-http/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/']" [routerLinkActive]="['active']">Home</a>
+          <a class="nav-link" [routerLink]="['/cursos']" [routerLinkActive]="['active']">Cursos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/cursos']" [routerLinkActive]="['active']">Cursos</a>
+          <a class="nav-link" [routerLink]="['/upload']" [routerLinkActive]="['active']">Upload File</a>
         </li>
       </ul>
     </div>
