--- a/angular-part08-request-http/src/app/cursos/cursos-lista/cursos-lista.component.html
+++ b/angular-part08-request-http/src/app/cursos/cursos-lista/cursos-lista.component.html
@@ -22,8 +22,8 @@
           <td>{{ curso.nome }}</td>
           <td>
             <div class="text-end">
-              <button class="btn btn-outline-warning d-inline-block me-2 mb-3 mb-md-0">Atualizar</button>
-              <button class="btn btn-outline-danger d-inline-block me-2 mb-3 mb-md-0">Deletar</button>
+              <button class="btn btn-outline-warning d-inline-block me-2 mb-3 mb-md-0" (click)="onEdit(curso.id)">Atualizar</button>
+              <button class="btn btn-outline-danger d-inline-block me-2 mb-3 mb-md-0" (click)="onDeleteSubject(curso)">Deletar</button>
             </div>
           </td>
         </tr>
@@ -38,7 +38,14 @@
 <!--        </div>-->
 <!--        -->
 <!--      </ng-template>-->
-    </div>
-  </div>
+    </div><!--card-body-->
+  </div><!--card-->
 </section>
+  <ng-template #deleteModal>
+    <div class="modal-body text-center">
+      <p>Tem certeza que deseja deletar?</p>
+      <button type="button" class="btn btn-default" (click)="onConfirmDelete()">Sim</button>
+      <button type="button" class="btn btn-primary" (click)="onDeclineDelete()">Não</button>
+    </div>
+  </ng-template>
 
