--- a/angular-part08-request-http/src/app/upload-file/upload-file.component.html
+++ b/angular-part08-request-http/src/app/upload-file/upload-file.component.html
@@ -2,11 +2,27 @@
   <div class="col-12">
     <div class="position-absolute top-50 start-50 translate-middle w-75">
       <div class="row">
-        <div class="col-8">
-      <label for="formFile" class="form-label">Selecionar arquivo</label>
-      <input class="form-control" type="file" id="formFile" (change)="onChange($event)" [multiple]="true">
+        <div class="col-8 mb-3">
+          <label for="formFile" class="form-label">Selecionar arquivo</label>
+          <input class="form-control" type="file" id="formFile" (change)="onChange($event)" [multiple]="true">
         </div><!--col-->
-      <button class="btn btn-primary col-auto align-self-end" [disabled]="!files" (click)="onUpload()">Salvar</button>
+        <button class="btn btn-primary col-auto align-self-end mb-3" [disabled]="!files" (click)="onUploadCustomRxJsOperators()">Salvar</button>
+      </div><!--row-->
+      <div class="row">
+        <div class="col-4 mb-3">
+          <div class="progress" role="progressbar" aria-label="Example with label" [attr.aria-valuenow]="progressoUpload" aria-valuemin="0"
+               aria-valuemax="100">
+            <div class="progress-bar" [style.width]="progressoUpload + '%'">{{ progressoUpload + '%' }}</div>
+          </div>
+        </div><!--col-->
+      </div><!--row-->
+      <div class="row">
+        <div class="col-12 col-sm-auto mb-3">
+        <button class="btn btn-danger mb-3" (click)="onDownloadPdf()">Download PDF</button>
+        </div><!--col-->
+        <div class="col-12 col-sm-auto mb-3">
+        <button class="btn btn-success mb-3" (click)="onDownloadExcel()">Download Excel</button>
+        </div><!--col-->
       </div><!--row-->
     </div>
   </div><!--col-->
