--- a/angular-part08-request-http/src/assets/css/pagina-inicial.css
+++ b/angular-part08-request-http/src/assets/css/pagina-inicial.css
@@ -2,4 +2,27 @@ section.formulario {
   max-width: 500px;
 }
 
+section.lib-search .search-table {
+  padding: 10%;
+  margin-top: -6%;
+}
+section.lib-search .search-box {
+  border: 1px solid #ababab;
+  padding: 3%;
+}
+section.lib-search .search-box input:focus {
+  box-shadow: none;
+  border: 2px solid #eeeeee;
+}
+section.lib-search .search-list {
+  background: #fff;
+  border: 1px solid #ababab;
+  border-top: none;
+}
+section.lib-search .search-list h3 {
+  background: #eee;
+  padding: 3%;
+  margin-bottom: 0%;
+}
+
 /*# sourceMappingURL=pagina-inicial.css.map */
