--- a/angular-crud/src/styles.scss
+++ b/angular-crud/src/styles.scss
@@ -1,4 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+@include mat.core();
+
+// Definindo as cores primarias, secundarias e erros de acordo com a paleta de cores
+$primary: mat.define-palette(mat.$deep-purple-palette);
+$accent: mat.define-palette(mat.$teal-palette, A200, A400, A700);
+$warn: mat.define-palette(mat.$red-palette);
+// Definindo a cor para o Tema Claro
+$light-theme: mat.define-light-theme((color: (primary: $primary, accent: $accent, warn: $warn), density: 0));
+// Definindo a cor criada para todos os componentes
+@include mat.all-component-themes($light-theme);
 
 * {margin: 0;padding: 0;box-sizing: border-box}
 
