--- a/angular-crud/src/app/components/courses/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/cursos/cursos.component.html
@@ -1,1 +1,35 @@
-<p>cursos works!</p>
+<mat-card>
+  <!--Card Header-->
+  <mat-card-header>
+    <mat-card-title>Cursos Disponíveis</mat-card-title>
+    <mat-card-subtitle>Lista de cursos cadastrados</mat-card-subtitle>
+  </mat-card-header>
+  <!--Card Body-->
+  <mat-card-content>
+    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+      <!--Colunas-->
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> Id </th>
+        <td mat-cell *matCellDef="let course"> {{ course.id }} </td>
+      </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Curso </th>
+        <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+      </ng-container>
+      <!-- Categoria Column -->
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+      </ng-container>
+      <!-- Descrição Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <td mat-cell *matCellDef="let course"> {{ course.description }} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+    </table>
+  </mat-card-content>
+</mat-card>
