--- a/angular-crud/src/app/components/courses/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/cursos/cursos.component.html
@@ -22,7 +22,7 @@
         <!-- Categoria Column -->
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef> Categoria</th>
-          <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+          <td mat-cell *matCellDef="let course"><mat-icon aria-hidden="false" aria-label="Categoria do Curso">{{ course.category | category}}</mat-icon> </td>
         </ng-container>
         <!-- Descrição Column -->
         <ng-container matColumnDef="description">
