--- a/angular-crud/src/app/components/courses/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/cursos/cursos.component.html
@@ -22,12 +22,30 @@
         <!-- Categoria Column -->
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef> Categoria</th>
-          <td mat-cell *matCellDef="let course"><mat-icon aria-hidden="false" aria-label="Categoria do Curso">{{ course?.courseCategory?.name | category}}</mat-icon> </td>
+          <td mat-cell *matCellDef="let course">
+            <mat-icon aria-hidden="false"
+                      aria-label="Categoria do Curso">{{ course?.courseCategory?.name | category}}</mat-icon>
+          </td>
         </ng-container>
         <!-- Descrição Column -->
         <ng-container matColumnDef="description">
           <th mat-header-cell *matHeaderCellDef> Descrição</th>
           <td mat-cell *matCellDef="let course"> {{ course.description }} </td>
+        </ng-container>
+        <!-- Adicionar Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>Ações</th>
+          <td mat-cell *matCellDef="let course">
+            <button mat-mini-fab color="primary"  [routerLink]="['new']">
+              <mat-icon>add</mat-icon>
+            </button>
+            <button mat-mini-fab color="accent" [routerLink]="['edit/', course.id]">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab color="warn" (click)="onDelete(course.id)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
