--- a/angular-crud/src/app/components/courses/curso-form/curso-form.component.html
+++ b/angular-crud/src/app/components/courses/curso-form/curso-form.component.html
@@ -1,1 +1,25 @@
-<p>curso-form works!</p>
+<mat-card>
+  <form [formGroup]="formulario">
+    <mat-card-header>
+      <mat-toolbar color="primary" class="justify-content-center mb-3">
+        <h1>Novo Curso</h1>
+      </mat-toolbar>
+    </mat-card-header>
+    <mat-card-content class="row">
+        <mat-form-field class="col-12">
+          <mat-label>*Digite o nome do curso</mat-label>
+          <input matInput formControlName="name" placeholder="Nome do curso">
+          <mat-hint class="invalid-feedback">Nome obrigatório</mat-hint>
+        </mat-form-field>
+        <mat-form-field class="col-12">
+          <mat-label>*Descrição do curso</mat-label>
+          <textarea matInput formControlName="name" placeholder="Descrição do curso"></textarea>
+          <mat-hint class="invalid-feedback">Descrição obrigatório</mat-hint>
+        </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions class="justify-content-end">
+      <button mat-raised-button color="primary" class="me-2" type="submit" [disabled]="formulario.invalid">Salvar</button>
+      <button mat-raised-button color="accent" type="button" (click)="onCancel()">Cancelar</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
