--- a/angular-crud/src/app/components/courses/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/cursos/cursos.component.html
@@ -34,12 +34,13 @@
         </ng-container>
         <!-- Adicionar Column -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>Ações</th>
-          <td mat-cell *matCellDef="let course">
+          <th mat-header-cell *matHeaderCellDef>
             <button mat-mini-fab color="primary"  [routerLink]="['new']">
               <mat-icon>add</mat-icon>
             </button>
-            <button mat-mini-fab color="accent" [routerLink]="['edit/', course.id]">
+          </th>
+          <td mat-cell *matCellDef="let course">
+            <button mat-mini-fab color="accent" class="me-sm-2" [routerLink]="['edit/', course.id]">
               <mat-icon>edit</mat-icon>
             </button>
             <button mat-mini-fab color="warn" (click)="onDelete(course.id)">
