--- a/angular-crud/src/assets/scss/curso-form.scss
+++ b/angular-crud/src/assets/scss/curso-form.scss
@@ -1,7 +1,7 @@
 form {
   width: 100%;
   min-width: 150px;
-  max-width: 80%;
+  max-width: 600px;
   margin: 0 auto;
   mat-form-field {
 
@@ -11,4 +11,3 @@ form {
     }
   }
 }
-
