--- a/angular-crud/src/assets/scss/reset-default-with-colors.scss
+++ b/angular-crud/src/assets/scss/reset-default-with-colors.scss
@@ -7,7 +7,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Roboto, "Segoe UI", sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  //font-family: Roboto, "Segoe UI", sans-serif;
 }
 
 html {
