--- a/angular-crud/src/styles.scss
+++ b/angular-crud/src/styles.scss
@@ -3,9 +3,9 @@
 @import "node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "assets/scss/reset-default-with-colors";
 @import "assets/scss/custom-scrollbar";
-@include mat.core();
 
 // Definindo as cores primarias, secundarias e erros de acordo com a paleta de cores
+@include mat.core();
 $primary: mat.define-palette(mat.$deep-purple-palette);
 $accent: mat.define-palette(mat.$teal-palette, A200, A400, A700);
 $warn: mat.define-palette(mat.$red-palette);
@@ -14,8 +14,32 @@ $light-theme: mat.define-light-theme((color: (primary: $primary, accent: $accent
 // Definindo a cor criada para todos os componentes
 @include mat.all-component-themes($light-theme);
 
-* {margin: 0;padding: 0;box-sizing: border-box}
-
-html, body {height: 100%;}
-
-body {font-family: Roboto, "Helvetica Neue", sans-serif;}
+// SnackBar Colors
+$successSnakeBarColor: #4caf50;
+$errorSnakeBarColor: #f44336;
+$warningSnakeBarColor: #ff9800;
+$buttonTextSnakeBarColor: #fff;
+mat-snack-bar-container.success {
+  .mdc-snackbar__surface {
+    background-color: $successSnakeBarColor !important;
+    .mdc-button__label {
+      color: $buttonTextSnakeBarColor !important;
+    }
+  }
+}
+mat-snack-bar-container.error {
+  .mdc-snackbar__surface {
+    background-color: $errorSnakeBarColor !important;
+    .mdc-button__label {
+      color: $buttonTextSnakeBarColor !important;
+    }
+  }
+}
+mat-snack-bar-container.warning {
+  .mdc-snackbar__surface {
+    background-color: $warningSnakeBarColor !important;
+    .mdc-button__label {
+      color: $buttonTextSnakeBarColor !important;
+    }
+  }
+}
