--- a/angular-crud/src/app/components/courses/curso-form/curso-form.component.html
+++ b/angular-crud/src/app/components/courses/curso-form/curso-form.component.html
@@ -25,7 +25,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions class="justify-content-end">
-      <button mat-raised-button color="primary" class="me-2" type="submit" [disabled]="isDisabledOnSubmit">
+      <button mat-raised-button color="primary" class="me-2" type="submit" [disabled]="formulario.invalid || isDisabledOnSubmit">
         <mat-icon>save</mat-icon>
         Salvar
       </button>
