--- a/angular-crud/src/app/components/courses/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/cursos/cursos.component.html
@@ -6,56 +6,13 @@
   </mat-card-header>
   <!--Card Body-->
   <mat-card-content>
-    <div *ngIf="courses$ | async as courses; else loading">
-      <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-        <!--Colunas-->
-        <!-- Position Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id</th>
-          <td mat-cell *matCellDef="let course"> {{ course.id }} </td>
-        </ng-container>
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Curso</th>
-          <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-        </ng-container>
-        <!-- Categoria Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> Categoria</th>
-          <td mat-cell *matCellDef="let course">
-            <mat-icon aria-hidden="false"
-                      aria-label="Categoria do Curso">{{ course?.courseCategory?.name | category}}</mat-icon>
-          </td>
-        </ng-container>
-        <!-- Descrição Column -->
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef> Descrição</th>
-          <td mat-cell *matCellDef="let course"> {{ course.description }} </td>
-        </ng-container>
-        <!-- Adicionar Column -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>
-            <button mat-mini-fab color="primary"  [routerLink]="['new']">
-              <mat-icon>add</mat-icon>
-            </button>
-          </th>
-          <td mat-cell *matCellDef="let course">
-            <button mat-mini-fab color="accent" class="me-sm-2" [routerLink]="['edit/', course.id]">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-mini-fab color="warn" (click)="onDelete(course.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-      </table>
-    </div>
+    <div class="mat-elevation-z8">
+    <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses"></app-courses-list>
     <ng-template #loading>
       <div class="loading-spinner">
         <mat-spinner></mat-spinner>
       </div>
     </ng-template>
+    </div><!--mat-elevation-z8-->
   </mat-card-content>
 </mat-card>
