--- a/angular-crud/src/app/components/courses/components/courses-list/courses-list.component.html
+++ b/angular-crud/src/app/components/courses/components/courses-list/courses-list.component.html
@@ -26,12 +26,12 @@
   <!-- Adicionar Column -->
   <ng-container matColumnDef="actions">
     <mat-header-cell class="justify-content-center action-column" *matHeaderCellDef>
-      <button mat-mini-fab color="primary" [routerLink]="['new']">
+      <button mat-mini-fab color="primary" (click)="onAdd()">
         <mat-icon>add</mat-icon>
       </button>
     </mat-header-cell>
     <mat-cell class="justify-content-center action-column" *matCellDef="let course">
-      <button mat-mini-fab color="accent" class="me-2" [routerLink]="['edit/', course.id]">
+      <button mat-mini-fab color="accent" class="me-2" (click)="onEdit(course.id)">
         <mat-icon>edit</mat-icon>
       </button>
       <button mat-mini-fab color="warn" (click)="onDelete(course.id)">
