--- a/angular-crud/src/app/components/courses/containers/cursos/cursos.component.html
+++ b/angular-crud/src/app/components/courses/containers/cursos/cursos.component.html
@@ -7,7 +7,12 @@
   <!--Card Body-->
   <mat-card-content>
     <div class="mat-elevation-z8">
-    <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses"></app-courses-list>
+    <app-courses-list *ngIf="courses$ | async as courses; else loading"
+                      [courses]="courses"
+                      (add)="onAdd()"
+                      (edit)="onEdit($event)"
+                      (delete)="onDelete($event)">
+    </app-courses-list>
     <ng-template #loading>
       <div class="loading-spinner">
         <mat-spinner></mat-spinner>
