--- a/angular-crud/src/app/components/courses/containers/curso-form/curso-form.component.html
+++ b/angular-crud/src/app/components/courses/containers/curso-form/curso-form.component.html
@@ -11,10 +11,10 @@
         <input matInput formControlName="name" placeholder="Nome do curso">
         <mat-error>Nome obrigatório</mat-error>
       </mat-form-field>
-      <mat-form-field class="col-12">
+      <mat-form-field class="col-12" formGroupName="courseCategory">
         <mat-label>Categoria</mat-label>
-        <mat-select formControlName="courseCategory" placeholder="Selecione uma categoria" [compareWith]="compareObj">
-          <mat-option *ngFor="let category of categories" [value]="category">{{ category.name }}</mat-option>
+        <mat-select formControlName="id" placeholder="Selecione uma categoria" [compareWith]="compareObj">
+          <mat-option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</mat-option>
         </mat-select>
         <mat-error>Categoria obrigatório</mat-error>
       </mat-form-field>
