Adicionando pacote de validadores, formulario e http. Validando campos de formulario.

--- a/angular-crud/src/app/components/courses/containers/curso-form/curso-form.component.html
+++ b/angular-crud/src/app/components/courses/containers/curso-form/curso-form.component.html
@@ -8,20 +8,22 @@
     <mat-card-content class="row">
       <mat-form-field class="col-12">
         <mat-label>Digite o nome do curso</mat-label>
-        <input matInput formControlName="name" placeholder="Nome do curso">
-        <mat-error>Nome obrigatório</mat-error>
+        <input matInput formControlName="name" placeholder="Nome do curso" #name>
+        <mat-hint align="end">{{ name.value?.length || 0 }}/100</mat-hint>
+        <mat-error>{{ matErrorMessage('name', 'Nome') }}</mat-error>
       </mat-form-field>
       <mat-form-field class="col-12" formGroupName="courseCategory">
         <mat-label>Categoria</mat-label>
         <mat-select formControlName="id" placeholder="Selecione uma categoria" [compareWith]="compareObj">
           <mat-option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</mat-option>
         </mat-select>
-        <mat-error>Categoria obrigatório</mat-error>
+        <mat-error>{{ matErrorMessage('courseCategory.id', 'Categoria') }}</mat-error>
       </mat-form-field>
       <mat-form-field class="col-12">
         <mat-label>Descrição do curso</mat-label>
-        <textarea matInput formControlName="description" placeholder="Descrição do curso"></textarea>
-        <mat-error>Descrição obrigatório</mat-error>
+        <textarea matInput formControlName="description" placeholder="Descrição do curso" #description></textarea>
+        <mat-hint align="end">{{ description.value?.length || 0 }}/255</mat-hint>
+        <mat-error>{{ matErrorMessage('description', 'Descrição') }}</mat-error>
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions class="justify-content-end">
