--- a/angular-crud/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/angular-crud/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
@@ -3,6 +3,6 @@
     <p>{{ data.message }}</p>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-raised-button color="primary" (click)="onConfirm(true)">{{ data?.btnConfirmLabel ? data.btnConfirmLabel : 'Sim' }}</button>
-    <button mat-raised-button color="warn" (click)="onConfirm(false)">{{ data?.btnCancelLabel ? data.btnCancelLabel : 'Não' }}</button>
+    <button mat-raised-button color="primary" (click)="onConfirm(true)">{{ data.btnConfirmLabel ? data.btnConfirmLabel : 'Sim' }}</button>
+    <button mat-raised-button color="warn" (click)="onConfirm(false)">{{ data.btnCancelLabel ? data.btnCancelLabel : 'Não' }}</button>
   </mat-dialog-actions>
