--- a/angular-crud/src/app/components/courses/containers/curso-form/curso-form.scss
+++ b/angular-crud/src/app/components/courses/containers/curso-form/curso-form.scss
@@ -1,13 +1,22 @@
 form {
   width: 100%;
   min-width: 150px;
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
+
   mat-form-field {
 
     textarea {
       height: 150px;
       resize: none;
     }
+  }
+
+  .btn-remove-lesson {
+    position: absolute;
+    left: 100%;
+    top: 0;
+    transform: translate(-15%, 0);
+    z-index: 1;
   }
 }
